Add native support for camel-quarkus-management
Fixes #5029

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -156,6 +156,7 @@
         <module>lra</module>
         <module>lumberjack</module>
         <module>mail</module>
+        <module>management</module>
         <module>master</module>
         <module>master-file</module>
         <module>master-openshift</module>
