--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -166,6 +166,7 @@
         <module>lumberjack</module>
         <module>lzf</module>
         <module>mail</module>
+        <module>management</module>
         <module>master</module>
         <module>micrometer</module>
         <module>microprofile-fault-tolerance</module>
