Replace org.graalvm.nativeimage:svm with org.graalvm.sdk:graal-sdk which has a status of public API

--- a/extensions/servicenow/runtime/pom.xml
+++ b/extensions/servicenow/runtime/pom.xml
@@ -35,9 +35,9 @@
     </properties>
 
     <dependencies>
-	<dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+        <dependency>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
