--- a/extensions-support/google-cloud/runtime/pom.xml
+++ b/extensions-support/google-cloud/runtime/pom.xml
@@ -52,8 +52,8 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
