--- a/extensions/file-watch/runtime/pom.xml
+++ b/extensions/file-watch/runtime/pom.xml
@@ -44,8 +44,8 @@
             <artifactId>camel-file-watch</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
