--- a/extensions/jolt/runtime/pom.xml
+++ b/extensions/jolt/runtime/pom.xml
@@ -45,8 +45,8 @@
             <artifactId>camel-jolt</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
