--- a/extensions/olingo4/runtime/pom.xml
+++ b/extensions/olingo4/runtime/pom.xml
@@ -64,8 +64,8 @@
             <artifactId>camel-olingo4</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.graalvm.nativeimage</groupId>
-            <artifactId>svm</artifactId>
+            <groupId>org.graalvm.sdk</groupId>
+            <artifactId>graal-sdk</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
