--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -90,6 +90,7 @@
         <module>debezium-mysql</module>
         <module>debezium-postgres</module>
         <module>debezium-sqlserver</module>
+        <module>debug</module>
         <module>digitalocean</module>
         <module>direct</module>
         <module>disruptor</module>
