Ref #5044 - Upgrade Quarkus Groovy to 3.2.1

--- a/integration-tests/groovy/pom.xml
+++ b/integration-tests/groovy/pom.xml
@@ -65,7 +65,7 @@
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.groovy</groupId>
-                    <artifactId>groovy</artifactId>
+                    <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
