chore: use systemPropertyVariables instead of systemProperties for maven surefire/failsafe plugin config

--- a/integration-tests/groovy-dsl/pom.xml
+++ b/integration-tests/groovy-dsl/pom.xml
@@ -201,9 +201,9 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <systemProperties>
+                            <systemPropertyVariables>
                                 <quarkus.runner>${quarkus.runner}</quarkus.runner>
-                            </systemProperties>
+                            </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -231,9 +231,9 @@
                                 </goals>
                                 <phase>integration-test</phase>
                                 <configuration>
-                                    <systemProperties>
+                                    <systemPropertyVariables>
                                         <quarkus.runner>${quarkus.runner}</quarkus.runner>
-                                    </systemProperties>
+                                    </systemPropertyVariables>
                                 </configuration>
                             </execution>
                         </executions>
