--- a/extensions-jvm/google-secret-manager/runtime/pom.xml
+++ b/extensions-jvm/google-secret-manager/runtime/pom.xml
@@ -83,8 +83,14 @@
             </exclusions>
         </dependency>
         <dependency>
-            <artifactId>google-cloud-pubsub</artifactId>
             <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-pubsub</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>gax-httpjson</artifactId>
+                    <groupId>com.google.api</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
