Set the official snapshot repositories

--- a/pom.xml
+++ b/pom.xml
@@ -1220,7 +1220,7 @@
             <repositories>
                 <repository>
                     <id>oss-snapshots-repo</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                     <releases>
                         <enabled>false</enabled>
                     </releases>
@@ -1232,7 +1232,7 @@
             <pluginRepositories>
                 <pluginRepository>
                     <id>oss-snapshots-repo</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                     <releases>
                         <enabled>false</enabled>
                     </releases>
