--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -222,7 +222,7 @@
         <module>tarfile</module>
         <module>telegram</module>
         <module>tika</module>
-        <!--<module>twilio</module> https://github.com/apache/camel-quarkus/issues/4527 -->
+        <module>twilio</module>
         <module>twitter</module>
         <module>univocity-parsers</module>
         <module>validator</module>
