--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1669,6 +1669,10 @@
                         <groupId>org.jgroups</groupId>
                         <artifactId>jgroups</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>jcl-over-slf4j</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
