--- a/integration-tests/cxf-soap-grouped/pom.xml
+++ b/integration-tests/cxf-soap-grouped/pom.xml
@@ -57,8 +57,8 @@
             <artifactId>quarkus-cxf-services-sts</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkiverse.cxf</groupId>
-            <artifactId>quarkus-cxf-xjc-plugins</artifactId>
+            <groupId>org.apache.cxf.xjc-utils</groupId>
+            <artifactId>cxf-xjc-runtime</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
