--- a/pom.xml
+++ b/pom.xml
@@ -324,7 +324,11 @@
         <pluginManagement>
             <plugins>
                 <!-- Only plugins relevant to both end user applications and Camel Quarkus extensions -->
-
+                <plugin>
+                    <groupId>org.apache.cxf</groupId>
+                    <artifactId>cxf-codegen-plugin</artifactId>
+                    <version>${cxf.version}</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
