Fixup 141ad67 Re-add activemq extension after it was added back in Camel 4.0.0-RC1 fix #5087

--- a/extensions/activemq/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/activemq/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -23,6 +23,7 @@
 ---
 name: "Camel ActiveMQ"
 description: "Send messages to (or consume from) Apache ActiveMQ. This component extends the Camel JMS component"
+icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/activemq.html"
   categories:
