Manage io.dropwizard.metrics dependencies used by camel-quarkus extensions
Fixes #5086

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6250,6 +6250,16 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>dropwizard-core</artifactId>
+                <version>${dropwizard-metrics.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-jmx</artifactId>
+                <version>${dropwizard-metrics.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.perfmark</groupId>
                 <artifactId>perfmark-api</artifactId>
                 <version>${perfmark-api.version}</version>
