Ref#4772 Introduce group testing for different jdbc db types

--- a/integration-test-groups/pom.xml
+++ b/integration-test-groups/pom.xml
@@ -46,6 +46,7 @@
         <module>dataformats-json</module>
         <module>foundation</module>
         <module>http</module>
+        <module>jdbc</module>
         <module>mongodb</module>
         <module>xml</module>
     </modules>
