Add MapStruct native support
Fixes #3994

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -169,6 +169,7 @@
         <module>lzf</module>
         <module>mail</module>
         <module>management</module>
+        <module>mapstruct</module>
         <module>master</module>
         <module>micrometer</module>
         <module>microprofile-fault-tolerance</module>
