--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -33,6 +33,7 @@ asciidoc:
     quarkus-version: 3.2.2.Final # replace ${quarkus.version}
     graalvm-version: 22.3.2 # replace ${graalvm.version}
     graalvm-docs-version: 22.3
+    mapstruct-version: 1.5.5.Final # replace ${mapstruct.version}
     min-maven-version: 3.8.2 # replace ${min-maven-version}
     target-maven-version: 3.9.3 # replace ${target-maven-version}
 
@@ -52,7 +53,7 @@ asciidoc:
     link-quarkus-code-generator: code.quarkus.io
     link-quarkus-cxf-doc: https://quarkiverse.github.io/quarkiverse-docs/quarkus-cxf/dev
     link-quarkus-cxf-source: https://github.com/quarkiverse/quarkus-cxf/tree/main
-    
+
     # Misc
     javaxOrJakartaPackagePrefix: jakarta # this can be switched to javax in older branches
 
