Configure native-image-xmx for kubernetes and master-openshift native tests

--- a/integration-tests/kubernetes/pom.xml
+++ b/integration-tests/kubernetes/pom.xml
@@ -75,7 +75,13 @@
 
 
     <profiles>
-       <profile>
+        <profile>
+            <id>ci</id>
+            <properties>
+                <quarkus.native.native-image-xmx>5g</quarkus.native.native-image-xmx>
+            </properties>
+        </profile>
+        <profile>
             <id>native</id>
             <activation>
                 <property>
