--- a/integration-tests/master-openshift/pom.xml
+++ b/integration-tests/master-openshift/pom.xml
@@ -112,7 +112,12 @@
     </dependencies>
 
     <profiles>
-
+        <profile>
+            <id>ci</id>
+            <properties>
+                <quarkus.native.native-image-xmx>5g</quarkus.native.native-image-xmx>
+            </properties>
+        </profile>
         <profile>
             <id>full</id>
             <activation>
